<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/defult_item_layout_margin_double"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
         >

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="@dimen/profile_image"
                android:layout_height="@dimen/profile_image" />


            <TextView
                android:id="@+id/text_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black900"
                android:padding="@dimen/defult_item_layout_margin_double" />


        </LinearLayout>



        <TextView
            android:id="@+id/support_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_help"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawablePadding="@dimen/defult_item_layout_margin_double"
            android:fontFamily="@font/amiri"
            android:gravity="center_vertical"
            android:padding="@dimen/defult_item_layout_margin"
            android:text="@string/support"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black900" />

        <TextView
            android:id="@+id/about_us_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_info"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawablePadding="@dimen/defult_item_layout_margin_double"
            android:fontFamily="@font/amiri"
            android:gravity="center_vertical"
            android:padding="@dimen/defult_item_layout_margin"
            android:text="@string/about_us"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black900" />


        <TextView
            android:id="@+id/sign_out_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/profile_face"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawablePadding="@dimen/defult_item_layout_margin_double"
            android:fontFamily="@font/amiri"
            android:gravity="center_vertical"
            android:padding="@dimen/defult_item_layout_margin"
            android:paddingStart="@dimen/defult_item_layout_margin_double"
            android:paddingTop="@dimen/defult_item_layout_margin"
            android:paddingBottom="@dimen/defult_item_layout_margin"
            android:text="@string/logout"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black900" />

    </LinearLayout>

</ScrollView>